--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+*/node_modules/
 
-# Environment variables (CRITICAL - Never commit these!)
+# Environment variables
 .env
 .env.local
 .env.development.local
@@ -17,12 +14,10 @@ frontend/.env
 # Build outputs
 dist/
 build/
-frontend/dist/
-frontend/build/
+*/dist/
+*/build/
 
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -42,7 +37,6 @@ coverage/
 .nyc_output
 
 # Dependency directories
-node_modules/
 jspm_packages/
 
 # Optional npm cache directory
@@ -65,6 +59,9 @@ jspm_packages/
 
 # Yarn Integrity file
 .yarn-integrity
+
+# dotenv environment variables file
+.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -104,48 +101,9 @@ temp/
 ehthumbs.db
 Thumbs.db
 
-# Testing
-coverage/
-.nyc_output/
-
-# Production
-/build
-
-# Misc
-*.tgz
-*.tar.gz
-
-# Local development files
-*.local
-
-# Database
-*.db
-*.sqlite
-
-# Backup files
-*.backup
-*.bak
-
-# Test files (if you have any)
-test-*.js
-*-test.js
-*-spec.js
-
-# Documentation build
-docs/build/
-
-# Docker
-.dockerignore
-docker-compose.override.yml
-
-# Railway
-.railway/
-
-# Vercel
-.vercel/
-
-# Netlify
-.netlify/
-
-# Local development
-.local/
+# Deployment files with sensitive data
+*-env-variables.txt
+*deployment*.md
+railway-env-variables.txt
+render-env-variables.txt
+RAILWAY_DEPLOYMENT.md
